fix(skinning): 🐛 not to reduce spacing if both sub1 and 2 exists

--- a/resources/skins.citizen.styles/skinning/interface-subtitle.less
+++ b/resources/skins.citizen.styles/skinning/interface-subtitle.less
@@ -17,11 +17,6 @@
 	text-overflow: ellipsis;
 }
 
-// Reduced spacing if both sub1 and 2 exists
-#contentSub + #contentSub2 {
-	margin-top: ~'calc( var( --space-xs ) * -1 )';
-}
-
 #citizen-tagline-user > span + span::before {
 	margin: 0 var( --space-xxs );
 	content: '·';
